# World-Economic-Indicator

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
models/: main.py
notebooks/: World Economic Indicator, Mid term project - fixed.ipynb
