[tool.poetry]
name = "gdp-service"
version = "0.1.0"
description = "GDP prediction API (Flask + pickle + Docker)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3"
pandas = "^2.0"
scikit-learn = "^1.4"
gunicorn = "^20.1"
cloudpickle = "^2.2"  # optional if you prefer cloudpickle
# you can add other libs used in preprocessing

[tool.poetry.dev-dependencies]
pytest = "^7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
